// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mount rendering matches the snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <h1>
        Welcome to React
      </h1>
      <h2 />
      <img
        alt="logo"
        className="App-logo"
        src="logo.svg"
      />
      <a
        className="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
    <ul
      className="custom-list"
    >
      <li
        className="blue"
      />
      <li />
      <li />
    </ul>
    <Title
      text="Hello"
    >
      <div>
        Hello
      </div>
    </Title>
    <p
      className="button-state"
    >
      No!
    </p>
    <button
      onClick={[Function]}
    >
      Click
    </button>
    <input
      onChange={[Function]}
      type="text"
    />
  </div>
</App>
`;

exports[`<App /> shallow rendering matches the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1>
      Welcome to React
    </h1>
    <h2 />
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
  <ul
    className="custom-list"
  >
    <li
      className="blue"
    />
    <li />
    <li />
  </ul>
  <Title
    text="Hello"
  />
  <p
    className="button-state"
  >
    No!
  </p>
  <button
    onClick={[Function]}
  >
    Click
  </button>
  <input
    onChange={[Function]}
    type="text"
  />
</div>
`;

exports[`<App /> shallow rendering matches the snapshot 2`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1>
      Welcome to React
    </h1>
    <h2 />
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
  <ul
    className="custom-list"
  >
    <li
      className="blue"
    />
    <li />
    <li />
  </ul>
  <Title
    text="Hello"
  />
  <p
    className="button-state"
  >
    No!
  </p>
  <button
    onClick={[Function]}
  >
    Click
  </button>
  <input
    onChange={[Function]}
    type="text"
  />
</div>
`;
